# isee-workbench

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4527f122f4de_c1_make_datasource_host_port_username_.py  dbf1518d2113_initial.py
backend/app/: config.py  crypto.py  database.py  deps.py  main.py
backend/app/models/: data_source.py  report.py
backend/app/routers/: __init__.py  auth.py  data_source.py  explorer.py  report.py  scheduler.py
backend/app/schemas/: data_source.py  report.py
backend/app/services/: connection.py  jwt_auth.py  report_generator.py  scheduler.py  ssrf_guard.py
backend/scripts/: seed_erp_demo.py  seed_reports.py  smoke_engine_cache.py  smoke_path_traversal.py  smoke_preview_endpoint.py  smoke_xss_check.py  smoke_xss_regression.py
backend/tests/: test_report_generator.py  test_scheduler.py  test_ssrf_guard.py  test_webhook_security.py
deploy/: ecosystem.config.js  isee-scheduler.service
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/pages/: DataExplorer.tsx  DataSourceList.tsx  Login.tsx  ReportEditor.tsx  ReportList.tsx  ReportPreview.tsx  Scheduler.tsx  index.ts
frontend/src/types/: index.ts
frontend/src/utils/: error.ts
